Cherry-pick 274706@main (9a071fa681c3). https://bugs.webkit.org/show_bug.cgi?id=269354

[GStreamer] webrtc/video-lowercase-media-subtype.html times out
    https://bugs.webkit.org/show_bug.cgi?id=269354

    Reviewed by Xabier Rodriguez-Calvar.

    The last issue with that test was that the transceiver direction (recvonly) of the receiver was
    copied over to the sending PeerConnection, thus breaking negotiation, preventing the sender to start
    streaming.

    * LayoutTests/platform/glib/TestExpectations:
    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
    (WebCore::GStreamerMediaEndpoint::doSetRemoteDescription):
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:

    Canonical link: https://commits.webkit.org/274706@main